Create dark theme

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Studio</title>
+    <title>TopChildren</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -26,13 +26,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <script src="./js/menu.js"></script>
   </head>
   <body>
     <header id="header">
       <div class="container--header">
-        <p class="logo"><span class="logo--blue">Top</span>Children</p>
+        <div class="logo-img"><img width="100" src="./images/logo-white.png" alt=""></div>
         <button type="button" class="nav-button" data-menu-button>
           <svg>
             <use
