--- a/index.html
+++ b/index.html
@@ -215,29 +215,35 @@
           </ul>
         </div>
       </section>
-      <section class="gallery">
+      <section class="slider">
         <div class="container">
           <h2>Фото наших моделей</h2>
-          <ul class="gallery__list">
-            <li class="gallery__item">
-              <img width="300" src="./images/gallery/photo1.jpg" alt="" />
+          <div class="slider__wrapper">
+            <ul class="slider__list">
+            <li class="slider__elem">
+              <img width="100px" src="./images/gallery/photo1.jpg" alt="">
             </li>
-            <li class="gallery__item">
-              <img width="300" src="./images/gallery/photo5.jpg" alt="" />
+            <li class="slider__elem">
+              <img width="100px" src="./images/gallery/photo2.jpg" alt="">
             </li>
-            <li class="gallery__item">
-              <img width="300" src="./images/gallery/photo3.jpg" alt="" />
+            <li class="slider__elem">
+              <img width="100px" src="./images/gallery/photo3.jpg" alt="">
             </li>
-            <li class="gallery__item">
-              <img width="300" src="./images/gallery/photo4.jpg" alt="" />
+            <li class="slider__elem">
+              <img width="100px" src="./images/gallery/photo4.jpg" alt="">
             </li>
-            <li class="gallery__item">
-              <img width="300" src="./images/gallery/photo6.jpg" alt="" />
+            <li class="slider__elem">
+              <img width="100px" src="./images/gallery/photo5.jpg" alt="">
             </li>
-            <li class="gallery__item">
-              <img width="300" src="./images/gallery/photo2.jpg" alt="" />
+            <li class="slider__elem">
+              <img width="100px" src="./images/gallery/photo6.jpg" alt="">
             </li>
           </ul>
+        </div>
+        <div class="slider__controls" >
+          <button class="button button--control slider__button" aria-prev>Назад</button>
+          <button class="button button--control slider__button" aria-frwd>Далі</button>
+        </div>
         </div>
       </section>
       <section class="map">
